[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-trust-radar"
version = "0.1.0"
description = "Lightweight trust scoring for suspicious trending GitHub repositories."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Repo Trust Radar contributors" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
repo-trust-radar = "repo_trust_radar.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
